# middleware/auth.go
@@ -1,0 +1,56 @@
+package middleware
+
+import (
+	"fmt"
+	"github.com/gofiber/fiber/v2"
+	"github.com/golang-jwt/jwt"
+	"github.com/kdrkrgz/socalize/conf"
+	"github.com/kdrkrgz/socalize/repository"
+	"strconv"
+	"strings"
+)
+
+func DeserializeUser(c *fiber.Ctx) error {
+	var tokenString string
+	authorization := c.Get("Authorization")
+
+	if strings.HasPrefix(authorization, "Bearer ") {
+		tokenString = strings.TrimPrefix(authorization, "Bearer ")
+	} else if c.Cookies("token") != "" {
+		tokenString = c.Cookies("token")
+	}
+
+	if tokenString == "" {
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"status": "fail", "message": "You are not logged in"})
+	}
+
+	tokenByte, err := jwt.Parse(tokenString, func(jwtToken *jwt.Token) (interface{}, error) {
+		if _, ok := jwtToken.Method.(*jwt.SigningMethodHMAC); !ok {
+			return nil, fmt.Errorf("unexpected signing method: %s", jwtToken.Header["alg"])
+		}
+
+		return []byte(conf.Get("TokenSecret")), nil
+	})
+	if err != nil {
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"status": "fail", "message": fmt.Sprintf("invalidate token: %v", err)})
+	}
+
+	claims, ok := tokenByte.Claims.(jwt.MapClaims)
+	if !ok || !tokenByte.Valid {
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"status": "fail", "message": "invalid token claim"})
+
+	}
+
+	var repo repository.Repository
+	id, err := strconv.Atoi(fmt.Sprintf("%v", claims["sub"]))
+	fmt.Println("IDDD", id)
+	user := repo.GetUserById(uint(id))
+
+	if fmt.Sprintf("%v", user.Id) != claims["sub"] {
+		return c.Status(fiber.StatusForbidden).JSON(fiber.Map{"status": "fail", "message": "the user belonging to this token no logger exists"})
+	}
+
+	//c.Locals("user", models.FilterUserRecord(&user))
+
+	return c.Next()
+}
